tests/rosetta/out/Fortran/arithmetic-rational.f90
! Generated by Mochi compiler v0.10.26 on 2025-07-16T09:28:39Z
program arithmetic_rational
  implicit none
    integer :: left
    integer :: right
    integer :: ans
      integer :: mid
      integer :: sq
    integer :: s
    integer :: limit
    integer :: f
        integer :: f2
    integer, dimension(9) :: nums
    integer :: i0
        integer :: val
        integer :: perfect
        character(len=100) :: s1
        character(len=100) :: s2
  main()
  contains
  recursive integer function intSqrt(x) result(res)
    integer, intent(in) :: x
    if ((x < 2)) then
      res = x
      return
    end if
    left = 1
    right = (x / 2)
    ans = 0
    do while ((left <= right))
      mid = ((left + ((right - left))) / 2)
      sq = (mid * mid)
      if ((sq == x)) then
        res = mid
        return
      end if
      if ((sq < x)) then
        left = (mid + 1)
        ans = mid
      else
        right = (mid - 1)
      end if
    end do
    res = ans
    return
  end function intSqrt
  recursive integer function sumRecip(n) result(res)
    integer, intent(in) :: n
    s = 1
    limit = intSqrt(n)
    f = 2
    do while ((f <= limit))
      if ((mod(n,f) == 0)) then
        s = ((s + n) / f)
        f2 = (n / f)
        if ((f2 /= f)) then
          s = (s + f)
        end if
      end if
      f = (f + 1)
    end do
    res = s
    return
  end function sumRecip
  recursive integer function main() result(res)
    nums = (/6,28,120,496,672,8128,30240,32760,523776/)
    do i0 = 1, size(nums)
      n = nums(i0)
      s = sumRecip(n)
      if ((mod(s,n) == 0)) then
        val = (s / n)
        perfect = ''
        if ((val == 1)) then
          perfect = 'perfect!'
        end if
        write(s1,'(G0)') n
        write(s2,'(G0)') val
        print *, trim(trim(trim(trim('Sum of recipr. factors of ' // s1) // ' = ') // s2) // ' exactly ') // perfect
      end if
    end do
  end function main
end program arithmetic_rational
